--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="author" content="Galileo Cappella">
-<meta name="description" content="Galileo Cappella&#39;s homepage">
+<meta name="description" content="Galileo Cappella&#39;s games">
 <meta name="keywords" content="Galileo Cappella, Software, Games, TTRPG">
 <meta name="color-scheme" content="dark light">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
