FIX: Meta title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="all">
 <title>
-  Galileo Cappella | Personal Website
+  Galileo Cappella | Games
 </title>
 <link rel="canonical" href="https://galileocap.me/games">
 <link rel="stylesheet" href="../index.css">
