OK: Added two games

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
               <p><a href="https://namle.galileocap.me/"><em>Namle</em></a>: A Wordle clone about guessing names.</p>
             </li>
             <li>
+              <p><a href="https://github.com/GalileoCap/game_connways_soldiers"><em>Connway's Soldiers</em></a>, a <a href="https://en.wikipedia.org/wiki/Conway%27s_Soldiers">famous math game</a> implemented in Godot for Android.</p>
+            </li>
+            <li>
+              <p><a href="/aventuras_de_texto"><em>Text Games</em></a>: A collection of text-based games I made when I was 13, they're all in Spanish.</p>
+            </li>
+            <li>
               <p>This list might be incomplete, you can always check out my <a href="https://github.com/GalileoCap">GitHub</a> for a more complete list.</p>
             </li>
           </ul>
